--- a/style/sass.css
+++ b/style/sass.css
@@ -6871,6 +6871,74 @@ p {
 .body_inicio .cont_animacionmiskills_vertical .segundo_section_inicio .list_skills .item_list_skills .contador {
   margin-right: 3em;
 }
+.body_inicio .cont_mis_ultimos_proyectos {
+  background: #fff;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+.body_inicio .cont_mis_ultimos_proyectos .titulo_ultimos_proyectos {
+  height: 25vh;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid black;
+}
+.body_inicio .cont_mis_ultimos_proyectos .titulo_ultimos_proyectos h4 {
+  width: 100%;
+  font-family: monaextrabold;
+  font-size: 80px;
+  font-weight: 900;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1;
+  letter-spacing: normal;
+  text-align: justify;
+  color: #000;
+  margin-left: 0.5em;
+  margin-bottom: 0px;
+}
+.body_inicio .cont_mis_ultimos_proyectos .cont_de_proyectos {
+  display: flex;
+  flex-direction: row;
+  height: 75vh;
+  border-bottom: 1px solid black;
+}
+.body_inicio .cont_mis_ultimos_proyectos .cont_de_proyectos .proyecto {
+  position: relative;
+  display: flex;
+  width: 25vw;
+  overflow: hidden;
+  border-right: 1px solid black;
+  align-items: center;
+  justify-content: center;
+}
+.body_inicio .cont_mis_ultimos_proyectos .cont_de_proyectos .proyecto p {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  margin-left: 20%;
+  margin-right: 20%;
+  padding: 10px;
+  background: #000;
+  color: #fff;
+  font-family: monasemibold;
+  font-size: 1vw;
+  z-index: 10;
+  text-align: center;
+}
+.body_inicio .cont_mis_ultimos_proyectos .cont_de_proyectos .proyecto img {
+  filter: brightness(50%) grayscale(90%);
+  height: 100%;
+}
+.body_inicio .cont_mis_ultimos_proyectos .cont_de_proyectos .proyecto:hover img {
+  filter: brightness(100%) grayscale(0%);
+  height: 120%;
+  cursor: url("../assets/img/ir.svg") 15 14, auto;
+}
 
 @media (max-width: 720px) {
   .body_inicio {
@@ -7796,5 +7864,74 @@ p {
   }
   .body_inicio .cont_animacionmiskills_vertical .segundo_section_inicio .list_skills .item_list_skills .contador {
     margin-right: 3em;
+  }
+  .body_inicio .cont_mis_ultimos_proyectos {
+    background: #fff;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    height: 410vh;
+  }
+  .body_inicio .cont_mis_ultimos_proyectos .titulo_ultimos_proyectos {
+    height: 10vh;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 0px solid black;
+  }
+  .body_inicio .cont_mis_ultimos_proyectos .titulo_ultimos_proyectos h4 {
+    width: 100%;
+    font-family: monaextrabold;
+    font-size: 25px;
+    font-weight: 900;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1;
+    letter-spacing: normal;
+    text-align: justify;
+    color: #000;
+    margin-left: 0.5em;
+    margin-bottom: 0px;
+  }
+  .body_inicio .cont_mis_ultimos_proyectos .cont_de_proyectos {
+    display: flex;
+    flex-direction: column;
+    height: 400vh;
+    border-bottom: 0px solid black;
+    gap: 1em;
+  }
+  .body_inicio .cont_mis_ultimos_proyectos .cont_de_proyectos .proyecto {
+    position: relative;
+    display: flex;
+    width: 100vw;
+    overflow: hidden;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    align-items: center;
+    justify-content: center;
+  }
+  .body_inicio .cont_mis_ultimos_proyectos .cont_de_proyectos .proyecto p {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    margin-left: 20%;
+    margin-right: 20%;
+    padding: 10px;
+    background: #000;
+    color: #fff;
+    font-family: monasemibold;
+    font-size: 4vw;
+    z-index: 10;
+    text-align: center;
+  }
+  .body_inicio .cont_mis_ultimos_proyectos .cont_de_proyectos .proyecto img {
+    filter: brightness(100%) grayscale(0%);
+    height: 100%;
+  }
+  .body_inicio .cont_mis_ultimos_proyectos .cont_de_proyectos .proyecto:hover img {
+    filter: brightness(100%) grayscale(0%);
+    height: 120%;
   }
 }
