add nueva seccion de ultimos proyectos

--- a/sass/_inicio.scss
+++ b/sass/_inicio.scss
@@ -2,7 +2,7 @@
     width: 100vw;
     overflow-x: hidden;
 
-    .animacion_loading{
+    .animacion_loading {
         z-index: 9999;
         position: absolute;
         top: 0;
@@ -15,15 +15,18 @@
         justify-content: center;
         align-items: center;
         background-color: #ffffff;
-        ul{
+
+        ul {
             display: flex;
             flex-direction: row;
             width: 100%;
-            height: 100%; /* Adjust height as needed */
+            height: 100%;
+            /* Adjust height as needed */
             padding: 0;
             margin: 0;
             overflow-y: visible;
-            li{
+
+            li {
                 width: 0.82%;
                 height: 100%;
                 top: 0;
@@ -43,6 +46,7 @@
             }
         }
     }
+
     .seccion_inicio {
         height: 90vh;
         display: flex;
@@ -117,9 +121,10 @@
                     color: #fff;
                     margin-left: 2em;
                 }
-                .boton_hablemos:hover{
+
+                .boton_hablemos:hover {
                     cursor: url("../assets/img/ir.svg") 15 14, auto;
-                    background:#c90101;
+                    background: #c90101;
 
                 }
             }
@@ -431,6 +436,10 @@
 
             }
 
+            .colum_unos {
+                display: none;
+            }
+
             .lista_about_me {
                 display: flex;
                 flex-direction: column;
@@ -642,6 +651,7 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+
             .cont_item_mis_servicios {
                 display: flex;
                 justify-content: space-between;
@@ -650,6 +660,7 @@
                 overflow-y: hidden;
                 border-top: #ffffff 1px solid;
                 background: #0e0e0e;
+
                 h4 {
                     margin-top: 0.5em;
                     margin-left: 0.5em;
@@ -718,6 +729,7 @@
                 .cont_slider_banderas {
                     pointer-events: visible;
                     visibility: visible;
+
                     .sslider_uno {
                         display: flex;
                         overflow-x: hidden;
@@ -1084,19 +1096,21 @@
         }
     }
 
-    .cont_mis_ultimos_proyectos{
+    .cont_mis_ultimos_proyectos {
         background: #fff;
         width: 100%;
         display: flex;
         flex-direction: column;
         height: 100vh;
-        .titulo_ultimos_proyectos{
+
+        .titulo_ultimos_proyectos {
             height: 25vh;
             display: flex;
             flex-direction: row;
             align-items: center;
             justify-content: space-between;
             border-bottom: 1px solid black;
+
             h4 {
                 width: 100%;
                 font-family: monaextrabold;
@@ -1115,14 +1129,14 @@
 
         }
 
-        .cont_de_proyectos{
+        .cont_de_proyectos {
             display: flex;
             flex-direction: row;
             height: 75vh;
             border-bottom: 1px solid black;
 
-            .proyecto{
-                position:relative;
+            .proyecto {
+                position: relative;
                 display: flex;
                 width: calc(100vw / 4);
                 overflow: hidden;
@@ -1130,8 +1144,8 @@
                 align-items: center;
                 justify-content: center;
 
-                p{
-                    position:absolute;
+                p {
+                    position: absolute;
                     top: 0;
                     left: 0;
                     right: 0;
@@ -1140,23 +1154,30 @@
                     padding: 10px;
                     background: #000;
                     color: #fff;
-                    font-family: monasemibold ;
+                    font-family: monasemibold;
                     font-size: 1vw;
                     z-index: 10;
                     text-align: center;
 
                 }
-                img{
-                filter:brightness(50%) grayscale(90%);
-                height: 100%;
+
+                img {
+                    filter: brightness(50%) grayscale(90%);
+                    height: 100%;
                 }
+
+                .cont_boton_ver_proyecto{
+                    display: none;
+                }
+
             }
-            .proyecto:hover{
-                img{
-                    filter:brightness(100%) grayscale(0%);
+
+            .proyecto:hover {
+                img {
+                    filter: brightness(100%) grayscale(0%);
                     height: 120%;
                     cursor: url("../assets/img/ir.svg") 15 14, auto;
-                    }
+                }
             }
         }
     }
@@ -1179,6 +1200,7 @@
             .cont_primera_columna_inicio {
                 width: 100vw;
                 border-right: #000 solid 1px;
+
                 .columna_titulo {
                     border-bottom: #000 solid 1px;
                     height: 70vh;
@@ -1313,6 +1335,7 @@
         }
 
         .cont_cinta_inicio {
+            display: none;
             width: 100%;
 
             .slider_inicio {
@@ -1373,7 +1396,7 @@
 
 
         .cont_about_me_inicio {
-            border-top: #000 solid 1px;
+            border-top: #000 solid 0px;
             height: auto;
             display: flex;
             flex-direction: column;
@@ -1382,7 +1405,7 @@
             .colum_uno {
                 height: 40vh;
                 position: relative;
-                display: flex;
+                display: none;
                 flex-direction: column;
                 width: 100%;
                 align-items: center;
@@ -1511,7 +1534,7 @@
 
             .colum_dos {
                 height: auto;
-                border-top: #000 solid 1px;
+                border-top: #000 solid 0px;
                 width: 100%;
                 display: flex;
                 flex-direction: column;
@@ -1524,6 +1547,7 @@
                     margin-right: 1em;
                     margin-top: 1em;
                     margin-bottom: 1em;
+
 
                     h4 {
                         font-family: monabold;
@@ -1549,6 +1573,138 @@
                         color: #000;
                     }
 
+                }
+
+
+                .colum_unos {
+                    height: 47vh;
+                    position: relative;
+                    display: flex;
+                    flex-direction: column;
+                    width: 100%;
+                    align-items: center;
+                    border-right: #000 0px solid;
+                    border-top: #000 solid 1px;
+                    justify-content: space-between;
+                    overflow: hidden;
+
+                    .cinta_colum_uno {
+                        display: none;
+                        width: 100%;
+                        height: 10%;
+                        background: #ffffff;
+                        border-bottom: #000 solid 1px;
+                        position: relative;
+                        width: 100%;
+                        overflow-x: hidden;
+
+                        .slider_inicio {
+                            width: 100%;
+                            position: absolute;
+                            height: 100%;
+                            display: flex;
+                            align-items: start;
+                            flex-shrink: 0;
+                            overflow: hidden;
+                            background: #ffffff;
+                            align-items: center;
+
+
+                            .slide-track {
+                                width: 100%;
+                                -webkit-animation: 10s linear infinite;
+                                animation: 15s linear infinite;
+                                animation-name: scroll101;
+                                display: flex;
+                                width: 2400px;
+                                align-items: start;
+                                gap: 1px;
+
+                                .slide {
+                                    height: 100%;
+                                    width: 200px;
+                                    display: flex;
+                                    align-items: center;
+                                    justify-content: center;
+
+                                    p {
+                                        padding-top: 10px;
+                                        padding-bottom: 10px;
+                                        color: #000;
+                                        text-align: center;
+                                        font-family: monaextrabold;
+                                        font-size: 18px;
+                                        font-style: normal;
+                                        line-height: 106%;
+                                        white-space: nowrap;
+                                    }
+                                }
+                            }
+                        }
+
+                    }
+
+                    .img_fondo_fotos {
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        z-index: 0;
+                        img {
+                            top: -2em;
+                            width: 100%;
+                            animation: rotate 30s linear infinite;
+                        }
+
+                        @keyframes rotate {
+                            from {
+                                transform: rotate(0deg);
+                            }
+
+                            to {
+                                transform: rotate(360deg);
+                            }
+                        }
+                    }
+
+                    .img_fondo_foto_dos {
+                        position: absolute;
+                        left: 0;
+                        z-index: -2;
+                        z-index: 0;
+                        width: 60%;
+                        top: 23%;
+                        left: 20%;
+
+                        img {
+                            top: -3em;
+                            width: 100%;
+                            animation: rotates 20s linear infinite;
+                        }
+
+                        @keyframes rotates {
+                            from {
+                                transform: rotate(0deg);
+                            }
+
+                            to {
+                                transform: rotate(-360deg);
+                            }
+                        }
+                    }
+
+
+                    .foto_jaksin {
+                        width: 40%;
+                        position: absolute;
+                        bottom: 0;
+                    }
+
+                    .cinta_colum_dos {
+                        width: 100%;
+                        height: 10%;
+                        background: #ffffff;
+                        border-top: #000 solid 1px;
+                    }
                 }
 
                 .lista_about_me {
@@ -2253,86 +2409,125 @@
             }
         }
 
-        
-        .cont_mis_ultimos_proyectos{
-        background: #fff;
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        height: 410vh;
-        .titulo_ultimos_proyectos{
-            height: 10vh;
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: space-between;
-            border-bottom: 0px solid black;
-            h4 {
-                width: 100%;
-                font-family: monaextrabold;
-                font-size: 25px;
-                font-weight: 900;
-                font-stretch: normal;
-                font-style: normal;
-                line-height: 1;
-                letter-spacing: normal;
-                text-align: justify;
-                color: #000;
-                margin-left: 0.5em;
-                margin-bottom: 0px;
-            }
 
-
-        }
-
-        .cont_de_proyectos{
+        .cont_mis_ultimos_proyectos {
+            background: #fff;
+            width: 100%;
             display: flex;
             flex-direction: column;
-            height: 400vh;
-            border-bottom: 0px solid black;
-            gap: 1em;
+            height: 410vh;
+            margin-bottom: 1em;
 
-            .proyecto{
-                position:relative;
+            .titulo_ultimos_proyectos {
+                height: 10vh;
                 display: flex;
-                width: 100vw;
-                overflow: hidden;
-                border-top: 1px solid black;
-                border-bottom: 1px solid black;
+                flex-direction: row;
                 align-items: center;
-                justify-content: center;
+                justify-content: space-between;
+                border-bottom: 0px solid black;
 
-                p{
-                    position:absolute;
-                    top: 0;
-                    left: 0;
-                    right: 0;
-                    margin-left: 20%;
-                    margin-right: 20%;
-                    padding: 10px;
-                    background: #000;
-                    color: #fff;
-                    font-family: monasemibold ;
-                    font-size: 4vw;
-                    z-index: 10;
-                    text-align: center;
+                h4 {
+                    width: 100%;
+                    font-family: monaextrabold;
+                    font-size: 25px;
+                    font-weight: 900;
+                    font-stretch: normal;
+                    font-style: normal;
+                    line-height: 1;
+                    letter-spacing: normal;
+                    text-align: justify;
+                    color: #000;
+                    margin-left: 0.5em;
+                    margin-bottom: 0px;
+                }
 
-                }
-                img{
-                filter:brightness(100%) grayscale(0%);
-                height: 100%;
-                }
+
             }
-            .proyecto:hover{
-                img{
-                    filter:brightness(100%) grayscale(0%);
-                    height: 120%;
+
+            .cont_de_proyectos {
+                display: flex;
+                flex-direction: column;
+                height: 400vh;
+                border-bottom: 0px solid black;
+                gap: 1em;
+                padding-right: 1em;
+                padding-left: 1em;
+
+
+                .proyecto {
+                    position: relative;
+                    display: flex;
+                    width: 100%;
+                    overflow: hidden;
+                    border: 1px solid black;
+                    align-items: center;
+                    justify-content: center;
+
+                    p {
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        right: 0;
+                        margin-left: 20%;
+                        margin-right: 20%;
+                        padding: 10px;
+                        background: #000;
+                        color: #fff;
+                        font-family: monasemibold;
+                        font-size: 4vw;
+                        z-index: 10;
+                        text-align: center;
+
                     }
+
+                    img {
+                        filter: brightness(100%) grayscale(0%);
+                        height: 100%;
+                    }
+
+                    .cont_boton_ver_proyecto{
+                        display: inline;
+                        height: 70px;
+                        position:absolute;
+                        bottom: 0em;
+                        left: 0;
+                        right: 0;
+
+                        .boton_ver_proyecto {
+                            height: fit-content;
+                            position: absolute;
+                            transform: translateY(0em);
+                            bottom: 0em;
+                            left: 0;
+                            right: 0;
+                            margin-top:auto;
+                            margin-left: 0%;
+                            margin-right: 0%;
+                            padding: 20px;
+                            background: #ff0000;
+                            color: #ffffff;
+                            font-family: monasemibold;
+                            font-size: 4vw;
+                            z-index: 10;
+                            text-align: center;
+                        }
+
+                    }
+
+
+                    
+                }
+
+
+
+                .proyecto:hover {
+                    img {
+                        filter: brightness(100%) grayscale(0%);
+                        height: 120%;
+                    }
+                }
             }
         }
-        }
-
-
 
     }
 }
