--- a/sass/_inicio.scss
+++ b/sass/_inicio.scss
@@ -195,7 +195,7 @@
             overflow: hidden;
             width: 40vw;
 
-            img {
+            video {
                 position: relative;
                 top: -5em;
                 width: 100%;
@@ -1325,7 +1325,7 @@
                 width: 100%;
                 border-top: #000 1px solid;
 
-                img {
+                video {
 
                     position: relative;
                     top: 0 em;
@@ -1546,8 +1546,7 @@
                     margin-left: 1em;
                     margin-right: 1em;
                     margin-top: 1em;
-                    margin-bottom: 1em;
-
+                    margin-bottom: 1.5em;
 
                     h4 {
                         font-family: monabold;
